@@ -20,6 +20,8 @@
 #include "control.h"
 #include "menu.h"
 
+bool informd3d = false;
+
 #if (HAVE_D3D9_H) && defined(WIN32)
 
 extern Bitu currentWindowWidth, currentWindowHeight;
@@ -950,6 +952,7 @@ HRESULT CDirect3D::RestoreDeviceObjects(void)
 }
 
 extern void RENDER_SetForceUpdate(bool);
+extern bool systemmessagebox(char const * aTitle, char const * aMessage, char const * aDialogType, char const * aIconType, int aDefaultButton);
 HRESULT CDirect3D::LoadPixelShader(const char * shader, double scalex, double scaley, bool forced)
 {
     if(!psEnabled) {
@@ -990,12 +993,17 @@ HRESULT CDirect3D::LoadPixelShader(const char * shader, double scalex, double sc
 	// Compare optimal scaling factor
 	bool dblgfx=((scalex < scaley ? scalex : scaley) >= psEffect->getScale());
 
+    std::string message;
 	if(dblgfx || forced) {
+	    message = "Loaded pixel shader - "+std::string(shader);
+	    if (informd3d) systemmessagebox("Direct3D shader", message.c_str(), "ok","info", 1);
 	    LOG_MSG("D3D:Pixel shader %s active", shader);
 	    RENDER_SetForceUpdate(psEffect->getForceUpdate());
 	    psActive = true;
 	    return S_OK;
 	} else {
+	    message = "Pixel shader not needed - "+std::string(shader);
+	    if (informd3d) systemmessagebox("Direct3D shader", message.c_str(), "ok","info", 1);
 	    LOG_MSG("D3D:Pixel shader not needed");
 	    psActive = false;
 	    return E_FAIL;
